# datasette-typescript-demo

./: .gitignore  Database.ts  README.md  package-lock.json  package.json  pyproject.toml  sqlite.json
pages/: index.vue
